<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="app.notify.AddNotificationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="72dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_textview"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/add_notification_title"/>

    <EditText
        android:id="@+id/title"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/title_textview"
        android:hint="@string/notification_title_hint"/>

    <TextView
        android:id="@+id/description_textview"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/title_textview"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/add_notification_text"/>

    <EditText
        android:id="@+id/description"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/description_textview"
        android:layout_below="@id/title_textview"
        android:hint="@string/notification_text_hint"/>

    <TextView
        android:id="@+id/icon_textview"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/description_textview"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/add_notification_icon"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_below="@id/description_textview"
        android:onClick="setIcon"/>

    <TextView
        android:id="@+id/priority_textview"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/icon"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/add_notification_priority"/>

    <Spinner
        android:id="@+id/priority"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_toRightOf="@id/priority_textview"
        android:layout_below="@id/icon" />

    <TextView
        android:id="@+id/date_textview"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/priority_textview"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/add_notification_date"/>

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:headerBackground="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/date_textview"
        android:layout_below="@id/priority_textview"/>

        <TextView
            android:id="@+id/time_textview"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/date_picker"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/add_notification_time"/>

        <app.notify.ParentLockTimePicker
            android:id="@+id/time_picker"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:headerBackground="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/date_textview"
            android:layout_below="@id/date_picker"/>
    </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/button"
        android:paddingTop="18dp"
        android:drawableTop="@drawable/add"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/colorPrimary"
        android:onClick="saveNotificationToStorage"/>
</RelativeLayout>
